# CG-OpenGL-Labs

./: README.md
.unotes/: unotes_meta.json
Lab 1/: CMakeLists.txt  Notes.md  Pipeline.md  main.cpp
Lab 1 - Intro/.unotes/: unotes_meta.json
Lab 2 - Rendering a Triangle/: CMakeLists.txt  main.cpp
Lab 2 - Rendering a Triangle/assets/shaders/: simple.vert
Lab 2/assets/shaders/: simple.frag  simple.vert
Lab 3/: CMakeLists.txt  main.cpp
Lab 3 - Seperation of Concerns/: main.cpp
Lab 3 - Seperation of Concerns/assets/shaders/: simple.vert
Lab 3/assets/shaders/: simple.frag
Lab 4/: main.cpp
Lab 4 - Transformations/: CMakeLists.txt  main.cpp
Lab 4/assets/shaders/: simple.frag  simple.vert
Lab 5/: Notes.md
Lab 5 - Culling & Masks/: Notes.md  main.cpp
Lab 5/.unotes/: unotes_meta.json
Lab 6/: main-0.cpp  main-1.cpp  main-2.cpp  main-6.cpp  main-8.cpp  main-c.cpp  main.cpp
Lab 6 - Textures/: CMakeLists.txt  main-3.cpp  main-4.cpp  main-5.cpp  main-7.cpp  main.cpp
Lab 6 - Textures/.unotes/: unotes_meta.json
Lab 6 - Textures/assets/shaders/: corrected-texture.frag  simple.vert  texture.vert
Lab 7 - Alpha Blending/: main-0.cpp  main-1.cpp  main-2.cpp  main.cpp
Lab 7 - FrameBuffers/: main-0.cpp  main-1.cpp  main-2.cpp  main.cpp
Lab 7 - I/: Notes.md  main meh.cpp  main-1.cpp  main-3.cpp  main.cpp
Lab 7 - II/: CMakeLists.txt  main-3.cpp  main-4.cpp  main.cpp
Lab 8/: main-2.cpp  main-6.cpp  main-7.cpp  main-8.cpp  main-9.cpp  main.cpp  utils.cpp
Lab 8 -Lights/: CMakeLists.txt  main-0.cpp  main-3.cpp  main-4.cpp  main-5.cpp  utils.hpp
(+18 files in other folders)
